# qtqa

./: .cmake.conf  .gitignore  .gitreview  .prev_CMakeLists.txt  CMakeLists.txt  dependencies.yaml  qtqa.pro  sync.profile
coin/: module_config.yaml
dnszones/: README  ns-multi.test.ZONEINFO  ns-single.test.ZONEINFO  test.ZONEINFO
fuzzing/oss-fuzz/: build.sh
scripts/: CMakeLists.txt  scripts.pro  setup.pl  test.pl
scripts/api-review/: all-api-modules  api-review-gen  cmakescan.py  java-api-review  modunite  qml-api-review  resetboring.py  sync-filter-api-headers
scripts/corebenchrunner/: .flake8  README.txt  common.py  config.json  database.py  git.py  host.py  qt.py  requirements.txt  runner.py  storage.py
scripts/generic/: coveragerunner_testcocoon.pl  parse_build_log.pl  parse_build_log.py  print_calling_makefile.pl  testconfig_enforcer.pl  testplanner.pl  testrunner.pl  testscheduler.pl  xml2html_testcocoon.pl
scripts/git/: git-qtqa-combine
scripts/jenkins/: ci.cfg  gerrit-notify-jenkins.pl  jenkins_job_trigger.pl  qt-jenkins-ci.pl  qt-jenkins-deploy.pl  qt-jenkins-integrator.pl  summarize-jenkins-build.pl
scripts/lancebot/: README.md  lancebot.py
scripts/packagetesting/: testpackage.py  testwheel.py
scripts/qmlbenchrunner/: README.md  annotate.py  build_and_test.sh  build_and_test_embedded_qt5.sh  build_and_test_embedded_qt6.sh  run.py  (+2 more)
src/network/: CMakeLists.txt  DNSLookup.json  README.txt  main.cpp  networktest.cpp  networktest.h  testcases.qrc
tests/: CMakeLists.txt  README.txt  tests.pro
vale_linter_config/: .vale.ini  README.txt
(+621 files in other folders)
